# legacy-project

./: README.md  configure.ac  developmentGuide.md
dep/: Makefile.am
dep/include/mysql/: libmysqld.def
dep/src/zlib/: Makefile.am
dep/src/zthread/: AtomicCount.cxx  Condition.cxx  CountingSemaphore.cxx  FastRecursiveMutex.cxx  Makefile.am  Monitor.cxx  PriorityCondition.cxx  RecursiveMutex.cxx  RecursiveMutexImpl.cxx  Semaphore.cxx  SynchronousExecutor.cxx  ThreadImpl.cxx  ThreadLocalImpl.cxx  ThreadQueue.cxx  ThreadedExecutor.cxx  Time.cxx
dep/src/zthread/linux/: AtomicCount.cxx
dep/src/zthread/macos/: ThreadOps.cxx
dep/src/zthread/posix/: Monitor.cxx
dep/src/zthread/vanilla/: SimpleAtomicCount.cxx
dep/src/zthread/win32/: Monitor.cxx  ThreadOps.cxx
dep/src/zthread/win9x/: AtomicCount.cxx
sql/: characters.sql  create_database.sql  realmd.sql  spells_template.sql
src/bindings/amachi/: Makefile.am  Readme.txt  ScriptMgr.cpp  config.h  system.cpp
src/bindings/amachi/scripts/: sc_defines.cpp  sc_defines.h
src/bindings/amachi/scripts/npc/: npc_vendor.cpp
src/framework/: Makefile.am
src/framework/Dynamic/: FactoryHolder.h  ObjectRegistry.h
src/framework/GameSystem/: GridLoader.h  GridReference.h  NGrid.h
src/framework/Platform/: Define.h
src/framework/Policies/: CreationPolicy.h  SingletonImp.h
src/framework/Utilities/: Callback.h  HashMap.h  LinkedList.h  TypeList.h
src/framework/Utilities/LinkedReference/: RefManager.h  Reference.h
src/game/: Bag.h  BattleSystem.cpp  BattleSystem.h  CellImpl.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h  GameObject.cpp  GameObject.h  GossipDef.cpp  GossipDef.h  GridDefines.h  GridNotifiers.cpp  GridNotifiersImpl.h  GroupHandler.cpp  HomeMovementGenerator.h  IdleMovementGenerator.h  Item.cpp  Item.h  ItemHandler.cpp  ItemPrototype.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Makefile.am  Map.cpp  Map.h  MapManager.cpp  MapManager.h  (+40 more)
src/legacyd/: Main.cpp  Makefile.am  Master.cpp  Master.h  legacyd.conf.in
src/shared/: ByteBuffer.h  Encoding.cpp  Encoding.h  Log.cpp  Log.h  SystemConfig.h.in  Util.h  WorldPacket.h
src/shared/Config/: Makefile.am
src/shared/Config/dotconfpp/: dotconfpp.cpp  mempool.cpp
src/shared/Database/: Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  MySQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  SQLStorage.cpp  SQLStorage.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h
trunk/: configure.ac  license.am
trunk/dep/include/: Makefile.am
trunk/dep/src/: Makefile.am
trunk/dep/src/sockets/: Makefile.am
trunk/dep/src/zthread/: ConcurrentExecutor.cxx  FastMutex.cxx  Mutex.cxx  PoolExecutor.cxx  PriorityInheritanceMutex.cxx  PriorityMutex.cxx  PrioritySemaphore.cxx  Thread.cxx  ThreadOps.cxx
trunk/dep/src/zthread/macos/: Monitor.cxx
trunk/dep/src/zthread/posix/: ThreadOps.cxx
trunk/dep/src/zthread/win32/: AtomicCount.cxx
trunk/sql/: characters.sql  create_database.sql  legacydb.sql
trunk/src/: Makefile.am
trunk/src/bindings/: Makefile.am
trunk/src/bindings/amachi/: Makefile.am  ScriptMgr.cpp  ScriptMgr.h
trunk/src/bindings/amachi/scripts/: sc_default.cpp  sc_defines.h
trunk/src/bindings/amachi/scripts/npc/: npc_grocery.cpp  npc_innkeeper.cpp
trunk/src/framework/: Makefile.am
trunk/src/framework/GameSystem/: Grid.h  GridLoader.h  GridRefManager.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.h
trunk/src/framework/Platform/: CompilerDefs.h
trunk/src/framework/Policies/: ObjectLifeTime.cpp  ObjectLifeTime.h  Singleton.h  ThreadingModel.h
trunk/src/framework/Utilities/: ByteConverter.h  EventProcessor.cpp  EventProcessor.h
trunk/src/framework/Utilities/CountedReference/: Reference.h  ReferenceHolder.h  ReferenceImpl.h
trunk/src/game/: Bag.cpp  BattleSystem.cpp  BattleSystem.h  Cell.h  CellImpl.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  Corpse.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAI.h  CreatureAIRegistry.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  GossipDef.h  GridDefines.h  GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h  GridStates.h  GroupHandler.cpp  HateMatrix.h  HomeMovementGenerator.cpp  IdleMovementGenerator.cpp  Item.cpp  Item.h  ItemHandler.cpp  ItemPrototype.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Makefile.am  Map.cpp  Map.h  (+48 more)
trunk/src/legacyd/: Makefile.am  Master.cpp  WorldRunnable.cpp  WorldRunnable.h  legacyd.conf.in
trunk/src/shared/: Common.h  Encoder.h  Encoding.cpp  Errors.h  Log.cpp  Log.h  Makefile.am  SystemConfig.h  SystemConfig.h.in  Timer.h  Util.cpp  Util.h  WorldPacket.h
trunk/src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h
trunk/src/shared/Config/dotconfpp/: dotconfpp.cpp  dotconfpp.h  mempool.h
trunk/src/shared/Database/: DatabaseMysql.cpp  Field.cpp  Field.h  Makefile.am  QueryResultMysql.h  SQLStorage.cpp  SqlDelayThread.cpp
