#
# Copyright (C) 2008-2008 LeGACY <http://www.legacy-project.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
AM_CPPFLAGS = -I$(srcdir)

noinst_LIBRARIES = liblegacyframework.a

liblegacyframework_a_SOURCES = \
	Dynamic/FactoryHolder.h \
	Dynamic/ObjectRegistry.h \
	GameSystem/Grid.h \
	GameSystem/GridLoader.h \
	GameSystem/GridRefManager.h \
	GameSystem/GridReference.h \
	GameSystem/NGrid.h \
	GameSystem/TypeContainer.h \
	GameSystem/TypeContainerFunctions.h \
	GameSystem/TypeContainerFunctionsPtr.h \
	GameSystem/TypeContainerVisitor.h \
	Network/SocketDefines.h \
	Platform/CompilerDefs.h \
	Platform/Define.h \
	Policies/CreationPolicy.h \
	Policies/ObjectLifeTime.cpp \
	Policies/Singleton.h \
	Policies/SingletonImp.h \
	Policies/ThreadingModel.h \
	Utilities/CountedReference/Reference.h \
	Utilities/CountedReference/ReferenceHolder.h \
	Utilities/CountedReference/ReferenceImpl.h \
	Utilities/LinkedReference/RefManager.h \
	Utilities/LinkedReference/Reference.h \
	Utilities/ByteConverter.h \
	Utilities/Callback.h \
	Utilities/HashMap.h \
	Utilities/LinkedList.h \
	Utilities/TypeList.h

